k8s/poly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poly
  labels:
    app: poly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poly
  template:
    metadata:
        labels:
          app: poly
    spec:
      containers:
      - name: poly
        image: amirstudent3232/k8s:0.1
        ports:
        - containerPort: 8443
        resources:
          requests:
            memory: "200Mi"
            cpu: "128m"
          limits:
            memory: "300Mi"
            cpu: "256m"
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 8443
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 8443
        volumeMounts:
          - name: tls-secret
            mountPath: /etc/tls-secret
            readOnly: True
      volumes:
        - name: tls-secret
          secret:
            secretName: tls-secret

---

apiVersion: v1
kind: Service
metadata:
  name: polyservice
spec:
  selector:
    app: polyservice
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test
spec:
  tls:
    - hosts:
      - amirawsroute.devops-int-college.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: amirawsroute.devops-int-college.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            service:
              name: polyservice
              port:
                number: 8443
